--- a/css/style.css
+++ b/css/style.css
@@ -10,11 +10,20 @@ body{
     width: 1440px;
 }
 
+/* primary */
+.pri-btn{
+    color: white;
+    font-size: 20px;
+    font-weight: 500;
+    background-color: #FF900E;
+    border: 0px;
+    border-radius: 8px;
+    padding: 20px 25px;
+
+}
+
 /*header section start
 ========= */
-header{
-    
-}
 .main-header{
     display: flex;
     justify-content: space-between;
@@ -31,6 +40,24 @@ nav ul li{
     list-style: none;
 }
 
+/* hero section */
+
+.hero-sec{
+    padding: 100px 285px;
+}
+
+.hero-text{
+    text-align: center;
+}
+.hero-text h2{
+    font-size: 45px;
+}
+.hero-text p{
+    margin: 30px 0px;
+}
+.hero-btn{
+    text-align: center;
+}
 
 
 
