experience section start

--- a/css/style.css
+++ b/css/style.css
@@ -111,6 +111,7 @@ nav ul li{
 }
 
 
+/* quick list of our features title styles */
 
 .f-style{
     font-weight: 700;
@@ -120,5 +121,14 @@ nav ul li{
     color: rgb(122, 118, 118);
 }
 
+/* quick list of our features title styles */
 
-/* features section end */
+
+/* =====================
+features section end 
+========================*/
+
+
+/* =======================
+Experience section end 
+==========================*/
