--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ body{
     color: white;
     font-size: 20px;
     font-weight: 500;
-    background-color: #FF900E;
+    background-color: var(--pri-color);
     border: 0px;
     border-radius: 8px;
     padding: 20px 25px;
@@ -127,7 +127,56 @@ nav ul li{
 /* =====================
 features section end 
 ========================*/
+.sec-two{
+    padding: 100px 0px;
+}
+.experience{
+    display: flex;
+    align-items: center;
+    margin: auto;
+    width: var(--main-width);
+}
+.features-details{
+    padding: 50px;
+}
+.features-title h2{
+    font-size: 45px;
+}
+.features-discrip p{
+    font-size: 18px;
+    margin: 25px 0px;
+}
 
+
+.one-features-list{
+    background-color: rgb(255, 255, 255);
+    box-shadow: 1px 1px 20px 1px rgb(180, 180, 180);
+    margin-bottom: 15px;
+    margin-right: 50px;
+    padding: 15px;
+}
+.fl-title{
+    margin-bottom: 10px;
+}
+
+.ex-btn{
+    text-align: center;
+}
+.ex-btn button{
+    color: white;
+    font-size: 20px;
+    font-weight: 500;
+    background-color: var(--pri-color);
+    border: 0px;
+    border-radius: 8px;
+    padding: 40px 50px;
+    margin: -500px 0px 0px 100px;
+}
+
+.ten-years{
+    font-size: 40px;
+    font-weight: 600;
+}
 
 /* =======================
 Experience section end 
