some facts section start

--- a/css/style.css
+++ b/css/style.css
@@ -181,3 +181,16 @@ features section end
 /* =======================
 Experience section end 
 ==========================*/
+
+
+/* =======================
+    Some Facts section start  
+==========================*/
+
+
+
+/* =======================
+    Some Facts section end  
+==========================*/
+
+
