--- a/css/style.css
+++ b/css/style.css
@@ -257,3 +257,32 @@ Experience section end
 .sponsor-images img{
     filter: grayscale(100%);
 }
+.sponsor-images img:hover{
+    filter: grayscale(0%);
+}
+
+
+
+/* Sponsors section end  
+>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
+<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<
+>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
+<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<
+
+    Footer section start
+==========================*/
+
+footer {
+    background-color: antiquewhite;
+    margin: 100px auto;
+    width: var(--main-width);
+    padding: 20px 0px;
+    border-radius: 8px;
+}
+footer p{
+    text-align: center;
+}
+footer p a{
+    text-decoration: none;
+    color: var(--pri-color);
+}
