--- a/css/style.css
+++ b/css/style.css
@@ -269,12 +269,59 @@ Experience section end
 >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
 <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<
 
-    Footer section start
+    contact section start
 ==========================*/
+
+.contact{
+    width: var(--main-width);
+
+    padding: 100px;
+    margin: 50px auto 0px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.form{
+    background-color: antiquewhite;
+    padding: 100px;
+}
+.contact-form {
+    width: 100%;
+    margin: 0 auto;
+  }
+  
+  .contact-form label {
+    display: block;
+    margin-bottom: 10px;
+    font-weight: bold;
+  }
+  
+  .contact-form input[type="text"],
+  .contact-form input[type="email"],
+  .contact-form textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    margin-bottom: 20px;
+  }
+  
+  .contact-form input[type="submit"] {
+    background-color: var(--pri-color);
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    font-size: 18px;
+  }
+
+/*======================================================
+ contact section end
+======================================================== */
 
 footer {
     background-color: antiquewhite;
-    margin: 100px auto;
+    margin: 0px auto 100px;
     width: var(--main-width);
     padding: 20px 0px;
     border-radius: 8px;
@@ -286,3 +333,11 @@ footer p a{
     text-decoration: none;
     color: var(--pri-color);
 }
+
+/* >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
+<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<
+Footer section end
+==========================*/
+
+
+  
