another section responsive done

--- a/css/resposive.css
+++ b/css/resposive.css
@@ -3,16 +3,18 @@
   ========= */
   header{
       background-color: antiquewhite ;
-  }
-  .main-header{
+      width:576px;
       margin: auto;
-      width:100%;
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-between;
-      align-items: center;
-      padding-top: 50px;
   }
+
+  .main-header{
+    margin: auto;
+    width: 576px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 50px;
+}
   .site-logo{
       font-size: 24px;
       flex-basis: 100%;
@@ -40,7 +42,9 @@
       font-size: 45px;
   }
   .hero-text p{
-      margin: 30px 20px;
+      margin: 15px;
+      font-size: 14px;
+      overflow-wrap: ;
   }
   .hero-btn{
       text-align: center;
@@ -51,27 +55,98 @@
       width:100%;
   }
     /*header section end
-  ========= */
-  .featurs{
+  ========= >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>*/
+
+
+
+  /* features section =========================================================================== */
+  .features{
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column-reverse;
+    justify-content: center;
+    align-items: center;
+    width: 576px;
+    margin: auto;
   }
   .glary {
-    display: grid;
-    grid-template-columns:repeat(2, 1fr);
+    display: flex;
+    flex-direction: column;
   }
   .glary img{
-    width: 50%;
+    width: 100%;
   }
   .features-texts {
+    text-align: center;
     padding: 30px;
   }
   .features-texts-title h2 {
     font-size: 30px;
   }
   .features-text-details p {
-    font-size: 16px;
+    font-size: 14px;
+    margin: 10px 10px
   }
 
-  }
+/*================================================= features section end========================= */
+ 
+/* =======================
+Experience section start 
+==========================*/
+.sec-two{
+    padding: 100px 0px;
+}
+.experience{
+    display: flex;
+    align-items: center;
+    margin: auto;
+    width: var(--main-width);
+}
+.features-details{
+    padding: 50px;
+}
+.features-title h2{
+    font-size: 45px;
+}
+.features-discrip p{
+    font-size: 18px;
+    margin: 25px 0px;
+}
+
+
+.one-features-list{
+    background-color: rgb(255, 255, 255);
+    box-shadow: 1px 1px 20px 1px rgb(180, 180, 180);
+    margin-bottom: 15px;
+    margin-right: 50px;
+    padding: 15px;
+}
+.fl-title{
+    margin-bottom: 10px;
+}
+
+.ex-btn{
+    text-align: center;
+}
+.ex-btn button{
+    color: white;
+    font-size: 20px;
+    font-weight: 500;
+    background-color: var(--pri-color);
+    border: 0px;
+    border-radius: 8px;
+    padding: 40px 50px;
+    margin: -500px 0px 0px 100px;
+}
+
+.ten-years{
+    font-size: 40px;
+    font-weight: 600;
+}
+
+/* =======================
+Experience section end 
+==========================*/
+
+
+}
   
