--- a/css/resposive.css
+++ b/css/resposive.css
@@ -44,7 +44,6 @@
   .hero-text p{
       margin: 15px;
       font-size: 14px;
-      overflow-wrap: ;
   }
   .hero-btn{
       text-align: center;
@@ -67,6 +66,7 @@
     align-items: center;
     width: 576px;
     margin: auto;
+    padding: 30px 0px;
   }
   .glary {
     display: flex;
@@ -95,6 +95,7 @@ Experience section start
 .sec-two{
    margin: auto;
    width: 576px;
+   padding: 30px 0px;
 }
 .experience{
     display: flex;
@@ -160,6 +161,48 @@ Experience section start
 Experience section end 
 ==========================*/
 
+
+.some-facts{
+
+}
+.some-fact-sec{
+    text-align: center;
+    width: 576px;
+    margin: auto;
+}
+.some-facts{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 10px;
+    padding: 15px;
+    margin: 0px 10px;
+}
+.one-fact{
+    padding: 15px 0px;  
+}
+.some-fact-headings p{
+    margin: 0px 10px;
+}
+/* 8888888888888888888888888888888 */
+
+.sponsors-sec{
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    width: 100%;
+}
+
+.sponsor-images{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    row-gap: 10px;
+    justify-items: center;
+    align-items: center;
+    padding: 0px 50px;
+}
+.sponsor-images img{
+    width: 50%;
+}
 
 }
   
