--- a/css/resposive.css
+++ b/css/resposive.css
@@ -1,251 +1,279 @@
 @media only screen and (max-width: 576px) {
+
     /*header section start
   ========= */
-  header{
-      background-color: antiquewhite ;
-      width:576px;
-      margin: auto;
-  }
+    header {
+        background-color: antiquewhite;
+        width: 576px;
+        margin: auto;
+    }
 
-  .main-header{
-    margin: auto;
-    width: 576px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-top: 50px;
-}
-  .site-logo{
-      font-size: 24px;
-      flex-basis: 100%;
-      text-align:center;
-  }
-  nav ul{
-      display: flex;
-      flex-wrap: wrap;
-      gap: 15px;
-      justify-content:center;
-  }
-  nav ul li{
-      list-style: none;
-      flex-basis: 100%;
-      text-align:center;
-  }
-  
-  /* hero section */
-  
-  .hero-text{
-      text-align: center;
-      padding: 20px 10px 0px;
-  }
-  .hero-text h2{
-      font-size: 45px;
-  }
-  .hero-text p{
-      margin: 15px;
-      font-size: 14px;
-  }
-  .hero-btn{
-      text-align: center;
-  }
-  .hero-image img{
-      display: flex;
-      justify-content: center;
-      width:100%;
-  }
+    .main-header {
+        margin: auto;
+        width: 576px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding-top: 50px;
+    }
+
+    .site-logo {
+        font-size: 24px;
+        flex-basis: 100%;
+        text-align: center;
+    }
+
+    nav ul {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 15px;
+        justify-content: center;
+    }
+
+    nav ul li {
+        list-style: none;
+        flex-basis: 100%;
+        text-align: center;
+    }
+
+    /* hero section */
+
+    .hero-text {
+        text-align: center;
+        padding: 20px 10px 0px;
+    }
+
+    .hero-text h2 {
+        font-size: 45px;
+    }
+
+    .hero-text p {
+        margin: 15px;
+        font-size: 14px;
+    }
+
+    .hero-btn {
+        text-align: center;
+    }
+
+    .hero-image img {
+        display: flex;
+        justify-content: center;
+        width: 100%;
+    }
+
     /*header section end
   ========= >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>*/
 
 
 
-  /* features section =========================================================================== */
-  .features{
-    display: flex;
-    flex-direction: column-reverse;
-    justify-content: center;
-    align-items: center;
-    width: 576px;
-    margin: auto;
-    padding: 30px 0px;
-  }
-  .glary {
-    display: flex;
-    flex-direction: column;
-  }
-  .glary img{
-    width: 100%;
-  }
-  .features-texts {
-    text-align: center;
-    padding: 30px;
-  }
-  .features-texts-title h2 {
-    font-size: 30px;
-  }
-  .features-text-details p {
-    font-size: 14px;
-    margin: 10px 10px
-  }
+    /* features section =========================================================================== */
+    .features {
+        display: flex;
+        flex-direction: column-reverse;
+        justify-content: center;
+        align-items: center;
+        width: 576px;
+        margin: auto;
+        padding: 30px 0px;
+    }
 
-/*================================================= features section end========================= */
- 
-/* =======================
+    .glary {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .glary img {
+        width: 100%;
+    }
+
+    .features-texts {
+        text-align: center;
+        padding: 30px;
+    }
+
+    .features-texts-title h2 {
+        font-size: 30px;
+    }
+
+    .features-text-details p {
+        font-size: 14px;
+        margin: 10px 10px
+    }
+
+    /*================================================= features section end========================= */
+
+    /* =======================
 Experience section start 
 ==========================*/
-.sec-two{
-   margin: auto;
-   width: 576px;
-   padding: 30px 0px;
-}
-.experience{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-items: center;    
-    margin: auto;
-    width: 576px;
-}
-.features-details{
-    width: 576px;
-    /* margin-left:10px; */
-    padding: 0px;
-}
-.features-title h2{
-    font-size: 45px;
-    text-align: center;
-}
-.features-discrip p{
-    font-size: 14px;
-    text-align: center;
-    margin: 25px;
+    .sec-two {
+        margin: auto;
+        width: 576px;
+        padding: 30px 0px;
+    }
 
-}
-.features-lists{
-    width: 576px;
-    margin: auto;
-}
+    .experience {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-items: center;
+        margin: auto;
+        width: 576px;
+    }
 
-.one-features-list{
-    background-color: rgb(255, 255, 255);
-    box-shadow: 1px 1px 10px 1px rgb(180, 180, 180);
-    margin-bottom: 15px;
-    padding: 15px;
-}
-.fl-title{
-    margin-bottom: 10px;
-}
+    .features-details {
+        width: 576px;
+        /* margin-left:10px; */
+        padding: 0px;
+    }
 
-/* .ex-btn{
+    .features-title h2 {
+        font-size: 45px;
+        text-align: center;
+    }
+
+    .features-discrip p {
+        font-size: 14px;
+        text-align: center;
+        margin: 25px;
+
+    }
+
+    .features-lists {
+        width: 576px;
+        margin: auto;
+    }
+
+    .one-features-list {
+        background-color: rgb(255, 255, 255);
+        box-shadow: 1px 1px 10px 1px rgb(180, 180, 180);
+        margin-bottom: 15px;
+        padding: 15px;
+    }
+
+    .fl-title {
+        margin-bottom: 10px;
+    }
+
+    /* .ex-btn{
     text-align: center;
 } */
-.ex-btn button{
-    color: white;
-    font-size: 16px;
-    font-weight: 500;
-    background-color: var(--pri-color);
-    border: 0px;
-    border-radius: 8px;
-    padding: 20px 30px;
-    margin: 0px;
-}
+    .ex-btn button {
+        color: white;
+        font-size: 16px;
+        font-weight: 500;
+        background-color: var(--pri-color);
+        border: 0px;
+        border-radius: 8px;
+        padding: 20px 30px;
+        margin: 0px;
+    }
 
-.ten-years{
-    font-size: 30px;
-    font-weight: 600;
-}
-.features-image img{
-    width: 100%;
-}
+    .ten-years {
+        font-size: 30px;
+        font-weight: 600;
+    }
 
-/* =======================
+    .features-image img {
+        width: 100%;
+    }
+
+    /* =======================
 Experience section end 
 ==========================*/
 
 
-/* =======================
+    /* =======================
 fact start
 ==========================*/
-.some-facts{
+    .some-facts {}
 
-}
-.some-fact-sec{
-    text-align: center;
-    width: 576px;
-    margin: auto;
-}
-.some-facts{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 10px;
-    padding: 15px;
-    margin: 0px 10px;
-}
-.one-fact{
-    padding: 15px 0px;  
-}
-.some-fact-headings p{
-    margin: 0px 10px;
-}
-/*=======================
+    .some-fact-sec {
+        text-align: center;
+        width: 576px;
+        margin: auto;
+    }
+
+    .some-facts {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 10px;
+        padding: 15px;
+        margin: 0px 10px;
+    }
+
+    .one-fact {
+        padding: 15px 0px;
+    }
+
+    .some-fact-headings p {
+        margin: 0px 10px;
+    }
+
+    /*=======================
 fact section end 
 ==========================*/
-/*========================================================== 
+    /*========================================================== 
 sponsor start 
 ============================================================ */
-.sponsors-sec{
-    display: flex;
-    flex-direction: column;
-    margin: auto;
-    width: 100%;
-}
+    .sponsors-sec {
+        display: flex;
+        flex-direction: column;
+        margin: auto;
+        width: 100%;
+    }
 
-.sponsor-images{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    row-gap: 10px;
-    justify-items: center;
-    align-items: center;
-    padding: 0px 50px;
-}
-.sponsor-images img{
-    width: 50%;
-}
+    .sponsor-images {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        row-gap: 10px;
+        justify-items: center;
+        align-items: center;
+        padding: 0px 50px;
+    }
 
-/* contact section start */
+    .sponsor-images img {
+        width: 50%;
+    }
 
-.contact-img img{
-    display: none;
-} 
-.contact{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    justify-items: center;
-    margin: auto;
-    width: 576px;
-    margin-top: 50px;
-    padding: 0px;
-}
-.form{
-    padding: 50px;
-    border-radius: 8px;
-}
+    /* contact section start */
 
-/* contact section end */
+    .contact-img img {
+        display: none;
+    }
 
-/* ==============
+    .contact {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        justify-items: center;
+        margin: auto;
+        width: 576px;
+        margin-top: 50px;
+        padding: 0px;
+    }
+
+    .form {
+        padding: 50px;
+        border-radius: 8px;
+    }
+
+    /* contact section end */
+
+    /* ==============
 footer section start
 =============== */
 
-footer{
-    margin: 50px auto;
-    width: 75%;
+    footer {
+        margin: 50px auto;
+        width: 75%;
 
-}
-footer p{
-    text-align: center;
-    font-size: 10px;
-}
+    }
+
+    footer p {
+        text-align: center;
+        font-size: 10px;
+    }
 
 
 }
@@ -253,4 +281,3 @@ footer p{
 /* ==============
 footer section end
 =============== */
-  
